# robotiq_2f

./: .gitignore  Dockerfile  Dockerfile_deploy  Dockerfile_dev  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
robotiq_2f_bringup/: CMakeLists.txt  README.md  package.xml
robotiq_2f_bringup/config/: bringup.rviz
robotiq_2f_bringup/launch/: bringup.launch.py
robotiq_2f_bringup/scenario/: ghost_robotiq_2f_base_link.json  ghost_robotiq_2f_tcp.json  robotiq_2f_base_link.json  robotiq_2f_tcp.json
robotiq_2f_description/: CMakeLists.txt  package.xml
robotiq_2f_description/urdf/: ghost_robotiq_2f_85_model.xacro  robotiq_2f.xacro  robotiq_2f_85_model.xacro  robotiq_2f_85_model_macro.xacro  robotiq_2f_transmission.xacro
robotiq_2f_driver/: CMakeLists.txt  Cargo.toml  package.xml
robotiq_2f_driver/src/: driver.rs  main.rs  manual.rs
robotiq_2f_msgs/: CMakeLists.txt  package.xml
robotiq_2f_msgs/msg/: CommandState.msg  MeasuredState.msg
robotiq_2f_tfbc/: CMakeLists.txt  Cargo.toml  package.xml
robotiq_2f_tfbc/src/: broadcaster.rs
robotiq_2f_ui/: CMakeLists.txt  Cargo.toml  package.xml  r2r_cargo.cmake
robotiq_2f_urscript/: Cargo.toml  natively.sh
robotiq_2f_urscript/src/: main.rs
robotiq_2f_urscript/templates/: activate.script  activate_old.script  close.script  close_old.script  move.script  move_old.script  open.script
