[package]
name = "robotiq_2f_driver"
authors = ["Endre Erős <endree@chalmers.se>"]
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4.1"
tokio-util = "0.7.0"
tokio-modbus = { version = "*", default-features = false, features = ["rtu"] }
r2r = { git = "https://github.com/sequenceplanner/r2r", version = "0.6.2" }
serde = "1.0.130"
chrono = "0.4.19"
fltk = "^1.2"

[[bin]]
name = "driver"
path = "src/driver.rs"

[[bin]]
name = "manual"
path = "src/manual.rs"