[package]
name = "robotiq_2f_tfbc"
version = "0.1.0"
authors = ["Endre Erős <endree@chalmers.se>"]
edition = "2021"

[dependencies]
r2r = "0.6.2"
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
serde = "1.0.136"
serde_json = "1.0.79"
#chrono = "0.4.19"
tempfile = "3.3.0"

[[bin]]
name = "broadcaster"
path = "src/broadcaster.rs"