[package]
name = "robotiq_2f_driver_ui"
authors = ["Endre Erős <endree@chalmers.se>"]
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
r2r = { git = "https://github.com/sequenceplanner/r2r", version = "0.6.2" }
serde = "1.0.130"
chrono = "0.4.19"
fltk = "^1.2"
